Eliminates Unnecessary boxing of the primive values in thier wrapper classes. They became unnecessary with Java 5+, giving warnings. However, in Java 9, the boxing constructors are deprecated so it became necessary to remove them.